so close, just need to reset partitions if we can, otherwise need to reset consumer and just skip by keeping track of offset at the partition level

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -10,6 +10,9 @@ tasks:
   default:
     cmds:
       - go run .
+  2:
+    cmds:
+      - DB_PATH="./dbs2" INSTANCE_ID=testinstance2 INTERNAL_PORT=8092 go run .
   docker:
     cmds:
       - docker build . -t fanoutdb:latest --ssh default
