--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -12,7 +12,7 @@ tasks:
       - go run .
   2:
     cmds:
-      - DB_PATH="./dbs2" INSTANCE_ID=testinstance2 INTERNAL_PORT=8092 go run .
+      - DB_PATH="./dbs2" INSTANCE_ID=testinstance2 INTERNAL_PORT=8092 API_PORT=8071 go run .
   docker:
     cmds:
       - docker build . -t fanoutdb:latest --ssh default
