--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ volumes:
   redpanda-0: null
   redpanda-1: null
   redpanda-2: null
+  minio_storage: null
 services:
   redpanda-0:
     command:
@@ -126,3 +127,25 @@ services:
       - 8080:8080
     depends_on:
       - redpanda-0
+  minio:
+    image: minio/minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_storage:/data
+    environment:
+      MINIO_ROOT_USER: user
+      MINIO_ROOT_PASSWORD: password
+    command: server --console-address ":9001" /data
+    container_name: minio
+  createbuckets:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc alias set myminio http://minio:9000 user password;
+      /usr/bin/mc mb myminio/testbucket;
+      exit 0;
+      "
