--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -12,7 +12,7 @@ tasks:
       - go run .
   2:
     cmds:
-      - DB_PATH="./dbs2" INSTANCE_ID=testinstance2 INTERNAL_PORT=8092 API_PORT=8071 BACKUP=1 KAFKA_SESSION_MS=7000 go run .
+      - DB_PATH="./dbs2" INSTANCE_ID=testinstance2 INTERNAL_PORT=8291 API_PORT=8290 GOSSIP_PORT=8292 BACKUP=1 KAFKA_SESSION_MS=7000 ADVERTISE_ADDR=localhost:8290 GOSSIP_PEERS=localhost:8192 go run .
   docker:
     cmds:
       - docker build . -t firescroll:latest --ssh default
